<package>
  <name>cpp_common</name>
  <version>0.4.3</version>
  <description>
    cpp_common contains C++ code for doing things that are not necessarily ROS
    related, but are useful for multiple packages. This includes things like
    the ROS_DEPRECATED and ROS_FORCE_INLINE macros, as well as code for getting
    backtraces.

    This package is a component of <a href="http://www.ros.org/wiki/roscpp">roscpp</a>.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/cpp_common</url>
  <author>John Faust</author>

  <build_depend>console_bridge</build_depend>
  <run_depend>console_bridge</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
