<package>
  <name>roscpp_core</name>
  <version>0.3.9</version>
  <description>
    Underlying data libraries for roscpp messages.
  </description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>
  <license>LGPL</license>

  <url type="website">http://www.ros.org/wiki/roscpp_core</url>
  <author>Josh Faust</author>

  <run_depend>cpp_common</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roscpp_traits</run_depend>
  <run_depend>rostime</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
