<package>
  <name>roscpp_core</name>
  <version>0.7.3</version>
  <description>
    Underlying data libraries for roscpp messages.
  </description>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/roscpp_core</url>
  <author>Josh Faust</author>
  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cpp_common</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roscpp_traits</run_depend>
  <run_depend>rostime</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
