<package>
  <name>roscpp_serialization</name>
  <version>0.7.3</version>
  <description>
    roscpp_serialization contains the code for serialization as described in
    <a href="http://www.ros.org/wiki/roscpp/Overview/MessagesSerializationAndAdaptingTypes">MessagesSerializationAndAdaptingTypes</a>.

    This package is a component of <a href="http://www.ros.org/wiki/roscpp">roscpp</a>.
  </description>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roscpp_serialization</url>
  <author>Josh Faust</author>
  <author>Dirk Thomas</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cpp_common</build_depend>
  <build_depend>roscpp_traits</build_depend>
  <build_depend>rostime</build_depend>

  <run_depend>cpp_common</run_depend>
  <run_depend>roscpp_traits</run_depend>
  <run_depend>rostime</run_depend>
</package>
