<?xml version="1.0"?>
<package format="2">
  <name>roscpp_traits</name>
  <version>0.6.7</version>
  <description>
    roscpp_traits contains the message traits code as described in
    <a href="http://www.ros.org/wiki/roscpp/Overview/MessagesTraits">MessagesTraits</a>.

    This package is a component of <a href="http://www.ros.org/wiki/roscpp">roscpp</a>.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roscpp_traits</url>
  <author>Josh Faust</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>rostime</build_depend>
  <exec_depend>cpp_common</exec_depend>
  <exec_depend>rostime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
