<?xml version="1.0"?>
<package format="2">
  <name>rostime</name>
  <version>0.6.7</version>
  <description>
    Time and Duration implementations for C++ libraries, including roscpp.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rostime</url>
  <author>Josh Faust</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cpp_common</build_depend>
  <exec_depend>cpp_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
