<package>
  <name>rostime</name>
  <version>0.7.3</version>
  <description>
    Time and Duration implementations for C++ libraries, including roscpp.
  </description>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rostime</url>
  <author>Josh Faust</author>
  <author>Dirk Thomas</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>libboost-date-time-dev</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <build_depend>cpp_common</build_depend>

  <run_depend>libboost-date-time-dev</run_depend>
  <run_depend>libboost-system-dev</run_depend>
  <run_depend>libboost-thread-dev</run_depend>
  <run_depend>cpp_common</run_depend>
</package>
